Add Java signature verification. (#4351)
- Add implementation of signature verification
- Add more tests
- Add automatic raw/PEM format detection for command line tools
- Fix essential typo: logID not logId - variable names are taken literally as JSON keys
- Fix capitalization in javadocs per style guide

Ref #2854