@@ -16,8 +16,14 @@
 
 package com.google.oak.transparency;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.KeyFactory;
+import java.security.PublicKey;
+import java.security.Signature;
+import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.Optional;
 
 /** Verifies a signature based on a public key. */
@@ -31,11 +37,17 @@ public class SignatureVerifier {
             System.exit(2);
         }
 
-        String signature = Files.readString(Path.of(args[0]));
+        byte[] signatureBytes = Files.readAllBytes(Path.of(args[0]));
         byte[] publicKeyBytes = Files.readAllBytes(Path.of(args[1]));
         byte[] contentBytes = Files.readAllBytes(Path.of(args[2]));
 
-        Optional<Failure> failure = verify(signature, publicKeyBytes, contentBytes);
+        // Auto-detect PEM format of public key.
+        String publicKeyString = new String(publicKeyBytes, StandardCharsets.UTF_8);
+        if (looksLikePem(publicKeyString)) {
+            publicKeyBytes = convertPemToRaw(publicKeyString);
+        }
+
+        Optional<Failure> failure = verify(signatureBytes, publicKeyBytes, contentBytes);
         if (failure.isPresent()) {
             System.err.println("Verification failed: " + failure.get().getMessage());
             System.exit(1);
@@ -49,24 +61,60 @@ public class SignatureVerifier {
     /**
      * Verifies the signature over content bytes using a public key.
      *
-     * @param signature      The base64-encoded signature
-     * @param publicKeyBytes The PEM-encoded public key
-     * @param contentBytes   The serialized content
-     * @return Empty if the verification succeeds, or a failure otherwise
+     * @param signatureBytes the raw ECDSA signature, likely 71 bytes long
+     * @param publicKeyBytes the raw public key
+     * @param contentBytes   the serialized content
+     * @return empty if the verification succeeds, or a failure otherwise
      */
     public static Optional<Failure> verify(
-            String signature, byte[] publicKeyBytes, byte[] contentBytes) {
-        if (signature == null || signature.length() == 0) {
+            byte[] signatureBytes, byte[] publicKeyBytes, byte[] contentBytes) {
+        if (signatureBytes == null || signatureBytes.length == 0) {
             return failure("empty signature");
-        }
-        if (contentBytes == null || contentBytes.length == 0) {
-            return failure("empty content");
         }
         if (publicKeyBytes == null || publicKeyBytes.length == 0) {
             return failure("empty public key");
         }
-        // TODO(#2854): verify the signature
-        return Optional.empty();
+        if (contentBytes == null || contentBytes.length == 0) {
+            return failure("empty content");
+        }
+
+        X509EncodedKeySpec keySpec = new X509EncodedKeySpec(publicKeyBytes);
+        Exception exception = null;
+        boolean success = false;
+        try {
+            KeyFactory keyFactory = KeyFactory.getInstance("EC");
+            PublicKey publicKey = keyFactory.generatePublic(keySpec);
+            Signature s = Signature.getInstance("SHA256withECDSA");
+            s.initVerify(publicKey);
+            s.update(contentBytes);
+            success = s.verify(signatureBytes);
+        } catch (Exception e) {
+            exception = e;
+        }
+
+        return success ? Optional.empty()
+                : failure(exception != null
+                        ? String.format("%s: %s", exception.getClass().getName(), exception.getMessage())
+                        : "Signature verification failed");
+    }
+
+    private static final String PEM_HEADER = "-----BEGIN PUBLIC KEY-----";
+    private static final String PEM_FOOTER = "-----END PUBLIC KEY-----";
+
+    /** Makes a plausible guess whether the public key is in PEM format. */
+    static boolean looksLikePem(String maybePem) {
+        String p = maybePem.trim();
+        return p.startsWith(PEM_HEADER) && p.endsWith(PEM_FOOTER);
+    }
+
+    /** Converts a public key from PEM (on disk format) to raw binary format. */
+    static byte[] convertPemToRaw(String pem) {
+        String trimmed = pem
+                .replace(PEM_HEADER, "")
+                .replace(PEM_FOOTER, "")
+                .replace("\n", "")
+                .trim();
+        return Base64.getDecoder().decode(trimmed);
     }
 
     private SignatureVerifier() {
